--- a/constructor.html
+++ b/constructor.html
@@ -14,11 +14,14 @@
 </head>
 
 <body>
-    <header class="o-row o-row—primary">
+    <header class="c-no_line">
         <a href="constructor.html">
             <p>Formula 1 Constructors</p>
         </a>
     </header>
+    <div class="c-filter__circle">
+        <img class="c-filter" src="assets/filter.png" width="32" height="32" alt="filter">
+    </div>
 </body>
 
 </html>
