general layout finished

--- a/gameprices.html
+++ b/gameprices.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>F1 constructor</title>
+    <title>gameprices</title>
     <link rel="stylesheet" href="style/screen.css" />
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"
         integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU"
@@ -15,12 +15,17 @@
 
 <body>
     <header class="c-no_line">
-        <a href="constructor.html">
-            <p>Formula 1 Constructors</p>
+        <a class="c-no_line" href="gameprices.html">
+            <h1>Game Prices</h1>
         </a>
     </header>
     <div class="c-filter__circle">
         <img class="c-filter" src="assets/filter.png" width="32" height="32" alt="filter">
+    </div>
+    <div class="c-games">
+        <h2 class="c-games__title">Game Title</h2>
+        <p class="c-games__lowest">Lowest Price: $</p>
+        <p class="c-games__price"> $$$</p>
     </div>
 </body>
 
