input gemaakt, nog geen animatie

--- a/gameprices.html
+++ b/gameprices.html
@@ -20,7 +20,10 @@
         </a>
     </header>
     <div class="c-filter__circle">
-        <img class="c-filter" src="assets/filter.png" width="32" height="32" alt="filter">
+        <img class="c-filter" src="assets/search.png" width="32" height="32" alt="filter">
+    </div>
+    <div class="c-filter__search">
+        <input type="text" value="enter a game">
     </div>
     <div class="c-games">
         <h2 class="c-games__title">Game Title</h2>
