zoekbalk klaar, informatie bezig

--- a/gameprices.html
+++ b/gameprices.html
@@ -20,15 +20,18 @@
         </a>
     </header>
     <div class="c-filter__circle">
-        <img class="c-filter" src="assets/search.png" width="32" height="32" alt="filter">
+        <img class="c-filter" src="assets/search.png" width="32" height="32" alt="search">
     </div>
     <div class="c-filter__search">
-        <input type="text" value="enter a game">
+        <input type="text" value="enter a game...">
     </div>
-    <div class="c-games">
-        <h2 class="c-games__title">Game Title</h2>
-        <p class="c-games__lowest">Lowest Price: $</p>
-        <p class="c-games__price"> $$$</p>
+    <div id="game" class="c-games">
+        <img id="cross" class="c-cross" src="assets/cross.png" alt="cross">
+        <h2 id="title" class="c-games__title">Game Title</h2>
+        <p id="lowest_price" class="c-games__lowest">Lowest Price: $</p>
+        <p id="price" class="c-games__price"> $$$</p>
+        <p id="release" class="c-release">release date: </p>
+        <p id="date" class="c-date">yyyy-mm-dd</p>
     </div>
 </body>
 
