--- a/gameprices.html
+++ b/gameprices.html
@@ -27,7 +27,7 @@
     </div>
     <div id="game" class="c-games">
         <img id="cross" class="c-cross" src="assets/cross.png" alt="cross">
-        <h2 id="title" class="c-games__title">Game Title</h2>
+        <h2 id="title" onclick="" class="c-games__title">Game Title</h2>
         <p id="lowest_price" class="c-games__lowest">Lowest Price: $</p>
         <p id="price" class="c-games__price"> $$$</p>
         <p id="release" class="c-release">release date: </p>
