--- a/gameprices.html
+++ b/gameprices.html
@@ -26,12 +26,17 @@
         <input type="text" value="enter a game...">
     </div>
     <div id="game" class="c-games">
-        <img id="cross" class="c-cross" src="assets/cross.png" alt="cross">
-        <h2 id="title" onclick="" class="c-games__title">Game Title</h2>
-        <p id="lowest_price" class="c-games__lowest">Lowest Price: $</p>
-        <p id="price" class="c-games__price"> $$$</p>
-        <p id="release" class="c-release">release date: </p>
-        <p id="date" class="c-date">yyyy-mm-dd</p>
+        <img class="c-cross" src="assets/cross.png" alt="cross">
+        <h2 class="c-games__title">Game Title</h2>
+        <p class="c-games__lowest">Lowest Price: $</p>
+        <p class="c-games__price">$$$</p>
+        <p class="c-games__lowest-info">Lowest Price: $</p>
+        <p class="c-games__price-info">$$$</p>
+        <p class="c-release">release date: </p>
+        <p class="c-date">yyyy-mm-dd</p>
+        <p class="c-stores">amount of stores: </p>
+        <p class="c-stores__amount">...</p>
+        <h3>Prices</h3>
     </div>
 </body>
 
