--- a/gameprices.html
+++ b/gameprices.html
@@ -11,6 +11,7 @@
         integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU"
         crossorigin="anonymous"></script>
     <script src="script/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
@@ -37,6 +38,7 @@
         <p class="c-stores">amount of stores: </p>
         <p class="c-stores__amount">...</p>
         <h3>Prices</h3>
+        <div class="c-chart" id="chart_prices"></div>
     </div>
 </body>
 
