api ready for use

--- a/gameprices.html
+++ b/gameprices.html
@@ -29,10 +29,10 @@
     <div id="game" class="c-games">
         <img class="c-cross" src="assets/cross.png" alt="cross">
         <h2 class="c-games__title">Game Title</h2>
-        <p class="c-games__lowest">Lowest Price: $</p>
-        <p class="c-games__price">$$$</p>
-        <p class="c-games__lowest-info">Lowest Price: $</p>
-        <p class="c-games__price-info">$$$</p>
+        <p class="c-games__lowest">Lowest Price: €</p>
+        <p class="c-games__price">€€€</p>
+        <p class="c-games__lowest-info">Lowest Price: €</p>
+        <p class="c-games__price-info">€€€</p>
         <p class="c-release">release date: </p>
         <p class="c-date">yyyy-mm-dd</p>
         <p class="c-stores">amount of stores: </p>
