--- a/gameprices.html
+++ b/gameprices.html
@@ -24,16 +24,20 @@
     <input class="c-filter__circle" type="submit" value="">
         <input type="image" class="c-filter" src="assets/search.png" width="32" height="32" alt="submit" onclick="searchgame()">
     </input>
-    <input class="c-filter__search" type="text" id="game" value="enter a game...">
+    <input class="c-filter__search" type="text" id="game" placeholder="enter a game...">
     </form>
     
-    <div id="game" class="c-games">
-        <img class="c-cross" src="assets/cross.png" alt="cross">
-        <h2 class="c-games__title">Game Title</h2>
-        <p class="c-games__lowest">Lowest Price: €</p>
-        <p class="c-games__price">€€€</p>
-        <p class="c-games__lowest-info">Lowest Price: €</p>
-        <p class="c-games__price-info">€€€</p>
+    <div class="c-games">
+        <h2 class="c-games__title" game-id="">Game Title</h2>
+        <p class="c-games__lowest">Lowest Price: </p>
+        <p class="c-games__price">€ €€€</p>
+        
+    </div>
+    <div class="c-game">
+        <img class="c-cross" id="" src="assets/cross.png" alt="cross">
+        <h2 class="c-games__title-show" game-id="">Game Title</h2>
+        <p class="c-games__lowest-info">Lowest Price:</p>
+        <p class="c-games__price-info">€ €€€</p>
         <p class="c-release">release date: </p>
         <p class="c-date">yyyy-mm-dd</p>
         <p class="c-stores">amount of stores: </p>
