api fully implemented, problem: game dis verdwijnt

--- a/gameprices.html
+++ b/gameprices.html
@@ -42,7 +42,7 @@
         <p class="c-date">yyyy-mm-dd</p>
         <p class="c-stores">amount of stores: </p>
         <p class="c-stores__amount">...</p>
-        <h3>Prices</h3>
+        <h3 class="c-prices">Prices</h3>
         <div class="c-chart" id="chart_prices"></div>
     </div>
 </body>
