--- a/gameprices.html
+++ b/gameprices.html
@@ -28,7 +28,7 @@
             <input class="c-filter__search" type="text" id="game" placeholder="enter a game...">
             </form>
 
-            <div class="">
+            <div class="visual">
                 <div class="c-games games">
                 <h2 class="c-games__title" game-id="">Game Title</h2>
                 <p class="c-games__lowest">Lowest Price: </p>
