server message added

--- a/gameprices.html
+++ b/gameprices.html
@@ -54,6 +54,14 @@
             <img src="assets/Double Ring-1.6s-227px.gif" alt="gif">
         </div>
     </div>
+
+    <div class="c-servers">
+        <div class="c-server">
+            <h3>Servers down...</h3>
+            <p class="c-serverinfo">We are very sorry for the inconvenience, at the moment we have a problem with our servers.</p>
+    </div>
+    </div>
+    
     
 </body>
 
