alternative api finished

--- a/league_champions/leaguechampions.html
+++ b/league_champions/leaguechampions.html
@@ -17,8 +17,8 @@
 <body>
     <div class="c-opacity">
         <header class="c-no_line">
-                <a class="c-no_line" href="gameprices.html">
-                    <h1>Game Prices</h1>
+                <a class="c-no_line" href="/league_champions/leaguechampions.html">
+                    <h1>League Champions</h1>
                 </a>
             </header>
             <form onsubmit="return false">
@@ -31,21 +31,20 @@
             <div class="visual">
                 <div class="c-games games">
                 <h2 class="c-games__title" game-id="">Game Title</h2>
-                <p class="c-games__lowest">Lowest Price: </p>
-                <p class="c-games__price">€ €€€</p>
             </div>
             </div>
             
             <div class="c-game">
                 <img class="c-cross" id="" src="assets/cross.png" alt="cross">
-                <h2 class="c-games__title-show" game-id="">Game title</h2>
-                <p class="c-games__lowest-info">Lowest Price: €</p>
-                <p class="c-games__price-info">€€€</p>
-                <p class="c-release">release date: </p>
-                <p class="c-date">dd-mm-yyyy</p>
-                <p class="c-stores">amount of stores: </p>
-                <p class="c-stores__amount">...</p>
-                <h3>Prices</h3>
+                <h2 class="c-games__title" game-id="">Game title</h2>
+                <p class="c-games__lowest-info">hp: </p>
+                <p class="c-games__price-info">000</p>
+                <p class="c-release">attack damage: </p>
+                <p class="c-date">000</p>
+                <p class="c-stores">movement speed: </p>
+                <p class="c-stores__amount">000</p>
+                <p class="c-stores">range: </p>
+                <p class="c-range">000</p>
                 <div class="c-chart" id="chart_prices"></div>
             </div>
     </div>
