feat: px to rem

--- a/league_champions/leaguechampions.html
+++ b/league_champions/leaguechampions.html
@@ -17,8 +17,8 @@
 <body>
     <div class="c-opacity">
         <header class="c-no_line">
-                <a class="c-no_line" href="/league_champions/leaguechampions.html">
-                    <h1>League Champions</h1>
+                <a class="c-no_line">
+                    <h1>League Of Legends Champions</h1>
                 </a>
             </header>
             <form onsubmit="return false">
