feat: favicon added and px -> rem

--- a/game_prices/gameprices.html
+++ b/game_prices/gameprices.html
@@ -51,7 +51,7 @@
     </div>
     <div class="c-gif">
         <div class="c-gif__img" >
-            <img src="assets/Double Ring-1.6s-227px.gif" alt="gif">
+            <img src="assets/Double Ring.gif" alt="gif">
         </div>
     </div>
 
