--- a/league_champions/leaguechampions.html
+++ b/league_champions/leaguechampions.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>gameprices</title>
+        <title>LoL Champions</title>
         <link rel="stylesheet" href="style/screen.css" />
+        <link rel="icon" href="assets/favicon.png" type="image/x-icon">
         <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"
             integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU"
             crossorigin="anonymous"></script>
@@ -45,7 +46,7 @@
         </div>
         <div class="c-gif">
             <div class="c-gif__img" >
-                <img src="assets/Double Ring-1.6s-227px.gif" alt="gif">
+                <img src="assets/Double Ring.gif" alt="gif">
             </div>
         </div>
         <div class="c-servers">
